--- a/netflixop.html
+++ b/netflixop.html
@@ -15,7 +15,7 @@
     }
 </style>
 <body>
-    <img src="download.png" alt="" srcset="">
+    <img src="Data/download.png" alt="" srcset="">
     <center>
      <h1>Best of Netflix Shows</h1>
      <hr color="red" size="5" >
@@ -32,49 +32,49 @@
             <td>8.8</td>
             <td> <a href="https://www.youtube.com/watch?v=rrwycJ08PSA">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=dark&jbv=80100172">Click to watch</a></td>
-            <td><img src="dark.jpg" width="99" height="99" alt="" srcset=""></td>
+            <td><img src="Data/dark.jpg" width="99" height="99" alt="" srcset=""></td>
         </tr>
         <tr>
             <td>Lucifer</td>
             <td>8.1</td>
             <td><a href="https://www.youtube.com/watch?v=X4bF_quwNtw">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=lucifer&jbv=80057918">Click to watch</a></td>
-            <td><img src="luci.jpg" width="99" height="99" alt="" srcset=""></td>
+            <td><img src="Data/luci.jpg" width="99" height="99" alt="" srcset=""></td>
         </tr>
         <tr>
             <td>Money Heist</td>
             <td>8.2</td>
             <td><a href="https://www.youtube.com/watch?v=htqXL94Rza4">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=money&jbv=80192098">Click to watch</a></td>
-            <td><img src="mh.jpg" width="99" height="99" alt="" srcset=""></td>
+            <td><img src="Data/mh.jpg" width="99" height="99" alt="" srcset=""></td>
         </tr>
         <tr>
             <td>Never Have I Ever</td>
             <td>7.9</td>
             <td><a href="https://www.youtube.com/watch?v=HyOCCCbxwMQ">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=nev&jbv=80179190">Click to watch</a></td>
-            <td><img src="nhie.jpg" width="99" height="99" alt="" srcset=""></td> 
+            <td><img src="Data/nhie.jpg" width="99" height="99" alt="" srcset=""></td> 
         </tr> 
         <tr>
             <td>Peaky Blinders</td>
             <td>8.8</td>
             <td><a href="https://www.youtube.com/watch?v=oVzVdvGIC7U">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=peak&jbv=80002479">Click to watch</a></td>
-            <td><img src="pb.jpg" width="99" height="99" alt="" srcset=""></td>
+            <td><img src="Data/pb.jpg" width="99" height="99" alt="" srcset=""></td>
         </tr> 
         <tr>
             <td>Sex Education</td>
             <td>8.3</td>
             <td><a href="https://www.youtube.com/watch?v=9cIdauxVsHE">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=sex&jbv=80197526">Click to watch</a></td>
-            <td><img src="se.jpg" width="99" height="99" alt="" srcset=""></td>
+            <td><img src="Data/se.jpg" width="99" height="99" alt="" srcset=""></td>
         </tr>
         <tr>
             <td>Stranger Things</td>
             <td>8.7</td>
             <td><a href="https://www.youtube.com/watch?v=ILwLN6hV-X8">Preview</a></td>
             <td><a href="https://www.netflix.com/search?q=st&jbv=80057281">Click to watch</a></td>
-            <td><img src="st.jpg" width="99" height="99" alt="" srcset=""></td>
+            <td><img src="Data/st.jpg" width="99" height="99" alt="" srcset=""></td>
         </tr>
      </table>
 
